- Fixed numerous bugs in TreeFileItem.
- Fixed bug in Observer where the QtilitiesPropertyChangeEvent for subject filter's monitoredProperties() were not delivered correctly.
- Fixed bug in ObjectPropertyBrowser where it would have crashes after trying to edit a property of the object after the object was deleted. The properties are now removed when the object is deleted.

Outstanding roadmap items for this version:
- Property editor must refresh when properties changes...
- ObserverWidget: allow custom control of column spanning.
- ObserverWidget: allow easy setting of a different header for the "Items" column in tree view mode.
- Widget logger engines: rich text, and does not save formatting engines.
- Help stuff is part of docs...
- Problem where mode switching causes setNewContext() to be called twice. Check session log plugin mode for example.
- Command editor widget, remove dependency on property browser lib.
- Action manager should act as a pointer list when commands are deleted. Thus they should be removed.
- Linux problems:
    - Sort out Linux dll versioning
    - Update getting started doc to show how to install git on windows, and to add /bin to path in linux
    - Column resizing in observer widget
- ObserverDotGraph finish & blog post
- Finish new SearchBoxWidget
- Unit testing + some tests off course
- Observers:
    - Before doing this: implement observer unit testing since it is all working now. Then it will be easier to verify
      changes made.
    - Split ObserverData so that we have shared data and unique data. Then we can use a QExplicitlySharedDataPointer
      to share stuff (for example: hints) between observers. To do this, all stuff that should not be shared between observers
      should go into the observer class itself, not in the ObserverData class. We should rename ObserverData to something
      like SharedObserverData to make this clear. Using this approach we must make sure that we handle the ObserverHints